TrainingDeveloperOrg/force-app/main/default/objects/Lead/fields/Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rating__c</fullName>
    <description>Use the score ranges below to build the second field with the label Lead Rating</description>
    <formula>IF(
				Lead_Score__c &lt; 10, IMAGE(&apos;/img/samples/stars_000.gif&apos;, &apos;0 Star&apos;), 
				IF(
								Lead_Score__c &gt;= 10 &amp;&amp; Lead_Score__c &lt;= 19 , IMAGE(&quot;/img/samples/stars_100.gif&quot;, &quot;1 Star&quot;),
								IF(
								    Lead_Score__c &gt;= 20 &amp;&amp; Lead_Score__c &lt;= 29 , IMAGE(&quot;/img/samples/stars_200.gif&quot;, &quot;2 Star&quot;),
												IF(
												    Lead_Score__c &gt;= 30 &amp;&amp; Lead_Score__c &lt;= 39 , IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;3 Star&quot;),
																IF(
																    Lead_Score__c &gt;= 40 &amp;&amp; Lead_Score__c &lt;= 49, IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;4 Star&quot;),
																				    IMAGE(&apos;/img/samples/stars_500.gif&apos;, &apos;5 Star&apos;)
																)
												)
								)
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lead Rating Based on Lead Score Field</inlineHelpText>
    <label>Lead Rating</label>
    <type>Text</type>
</CustomField>