TrainingDeveloperOrg/force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <description>Lead Score field that adds the values outlined above and displays each record’s score as an integer.</description>
    <formula>IF(
    ISPICKVAL(Status, &apos;Closed - Not Converted&apos;), 0,
				IF(
				    DoNotCall == TRUE, (-25), 0
				) 
				+
				IF(
				    Email != NULL, (+15), 0
				)
				+
				CASE(
				    LeadSource, &apos;Web&apos;, (+20), &apos;Phone Inquiry&apos;, (+35), &apos;Partner Referral&apos;, (+25), &apos;Purchased List&apos;, (+10), 0
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lead Score field that adds the values outlined above and displays each record’s score as an integer.</inlineHelpText>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>