TrainingDeveloperOrg/force-app/main/default/objects/Lead/fields/Possible_Matching_Account__c.field-meta.xml
<CustomField>
    <fullName>Possible_Matching_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Possible Matching Account</description>
    <label>Possible Matching Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>