TrainingDeveloperOrg/force-app/main/default/objects/Lead/validationRules/LEAD001_Email_Or_Phone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>LEAD001_Email_Or_Phone_Required</fullName>
    <active>true</active>
    <description>Lead validation rule that requires either the Email or Phone fields to be populated.</description>
    <errorConditionFormula>AND(
				OR(
								ISNEW(),
								ISCHANGED(Phone),
								ISCHANGED(Email)
				),
				ISBLANK(Phone),
				ISBLANK(Email)
)</errorConditionFormula>
    <errorMessage>Either Email or Phone are required [LEAD001]</errorMessage>
</ValidationRule>